# io-proxy

./: .gitignore  CMakeLists.txt  README.md
cmake/: thirdparty.cmake
example-configs/: heat_bp5.xml  heat_bp5_zfp.xml  heat_file.xml
foamPython/: .gitignore  README.md  functions.py  icoFoam.py  laplacianFoam.py  scriptCompareCython.py  scriptProfileCode.sh  scriptSetCython.sh  scriptUnsetCython.sh  simpleFoam.py
foamPython/src/OpenFOAM/fields/: fields.py  include.py  writeHeader.py
foamPython/src/OpenFOAM/fields/surfaceField/: surfaceField.py  surfaceFieldBoundaryConditions.py
foamPython/src/OpenFOAM/fields/surfaceField/surfaceScalarField/: surfaceScalarField.py
foamPython/src/OpenFOAM/fields/surfaceField/surfaceVectorField/: surfaceVectorField.py
foamPython/src/OpenFOAM/fields/volField/: volField.py  volFieldBoundaryConditions.py
foamPython/src/OpenFOAM/fields/volField/volScalarField/: volScalarField.py
foamPython/src/OpenFOAM/fields/volField/volVectorField/: setup_volVectorField.py  volVectorField_cy.pyx  volVectorField_py.py
foamPython/src/finiteVolume/cfdTools/: include.py
foamPython/src/finiteVolume/cfdTools/general/constrainHbyA/: constrainHbyA.py
foamPython/src/finiteVolume/cfdTools/incompressible/: continuityErrs.py
foamPython/src/finiteVolume/fvMatrices/: fvMatrix.py  include.py
foamPython/src/finiteVolume/fvMatrices/fvc/: fvc.py
foamPython/src/finiteVolume/fvMatrices/fvc/fvSchemes/: fvSchemes.py
foamPython/src/finiteVolume/fvMatrices/fvc/fvSchemes/div/: div.py
foamPython/src/finiteVolume/fvMatrices/fvc/fvSchemes/grad/: boundaryContributions.py  grad.py
foamPython/src/finiteVolume/fvMatrices/fvm/: fvm.py
foamPython/src/finiteVolume/fvMatrices/fvm/fvSchemes/: fvSchemes.py
foamPython/src/finiteVolume/fvMatrices/fvm/fvSchemes/ddt/: ddt.py
foamPython/src/finiteVolume/fvMatrices/fvm/fvSchemes/div/: boundaryContributions.py  div.py
foamPython/src/finiteVolume/fvMatrices/fvm/fvSchemes/laplacian/: boundaryContributions.py.orig  boundaryContributions_cy.pyx  laplacian.py  laplacian_cy.pyx  setup_boundaryContributions.py  setup_laplacian.py
foamPython/src/finiteVolume/fvMesh/: fvMesh.py
foamPython/src/finiteVolume/fvSolution/: fvSolution.py.orig  fvSolution_cy.pyx  include.py  setup_fvSolution.py
foamPython/src/finiteVolume/fvSolution/solvers/GaussSeidel/: GaussSeidel.py.orig  GaussSeidel_cy.pyx  setup_GaussSeidel.py
foamPython/src/finiteVolume/fvSolution/solvers/PointJacobi/: PointJacobi.py
foamPython/tutorials/icoFoam/cavity/: Allrun  Allrun.pre  caseSetup.py
foamPython/tutorials/icoFoam/cavity/system/: controlDict.orig
foamPython/tutorials/laplacianFoam/cavity/: Allclean  Allrun  caseSetup.py
foamPython/tutorials/laplacianFoam/cavity/system/: blockMeshDict  controlDict  controlDict.orig
foamPython/tutorials/simpleFoam/cavity/: caseSetup.py
foamPython/tutorials/simpleFoam/pitzDaily/: Allrun  caseSetup.py
foamPython/tutorials/simpleFoam/pitzDaily/system/: blockMeshDict
heatTransfer/: CMakeLists.txt  README.md  heat_bp5_bwc.xml
heatTransfer/write/: CMakeLists.txt  FileView.cpp  HeatTransfer.cpp  HeatTransfer.h  IO.h  IOadios2.cpp  IOadios2.h  IOascii.cpp  IObinary.cpp  IObinary.h  IOmpiLevel0.cpp  IOmpiLevel3.cpp  IOsion.cpp  IOsion.h  IOstream.cpp  Settings.cpp  Settings.h  helper.cpp  main.cpp
io-prototyping/heatTransfer/: CMakeLists.txt  ReadMe.md
io-prototyping/heatTransfer/cmake/: FindSIONlib.cmake  ProcessOptions.cmake
io-prototyping/heatTransfer/read/: CMakeLists.txt
io-prototyping/heatTransfer/read_fileonly/: CMakeLists.txt
io-prototyping/heatTransfer/write/: CMakeLists.txt  FileView.h  HeatTransfer.cpp  IO.cpp  IO.h  IO_adios2.cpp  IO_ascii.cpp  IO_binary.cpp  IO_mpiio_write.cpp  IO_mpiio_write_all.cpp  IO_mpiio_write_all_indexed.cpp  IO_mpiio_write_at.cpp  IOadios2.cpp  IOadios2.h  IOascii.cpp  IOascii.h  IObinary.cpp  IObinary.h  IOmpiLevel0.cpp  IOmpiLevel0.h  IOmpiLevel1.cpp  IOmpiLevel1.h  IOmpiLevel3.cpp  IOmpiLevel3.h  IOsion.cpp  IOsion.h  IOstream.cpp  IOstream.h  Settings.cpp  Settings.h  helper.cpp  helper.h  main.cpp
src/: IOadios2.cpp  IOascii.h  IOmpiLevel0.cpp  IOmpiLevel0.h  IOmpiLevel1.cpp  IOmpiLevel3.h  IOsion.cpp  IOstream.cpp  IOstream.h  Settings.cpp  helper.h  main.cpp  ndarray.cpp  ndarray.h
